--- a/lht_tables.css
+++ b/lht_tables.css
@@ -60,7 +60,7 @@
         padding: 5px;
     }
 
-    /* This style gives every odd table row */
+    /* This style gives every odd table row a yellow-ish background color and a gray border. */
     tr:nth-last-of-type(odd) {
         background-color: rgb(255, 235, 178);
         border: 2px solid gray;
@@ -85,6 +85,8 @@
 
 /* This is a media query for devices with screen widths no less than 641 pixels. */
 @media only screen and (min-width: 641px) {
+
+    /* This style affects the table to set its background image, position the background in the bottom right, set the background size to 40% with no repeat, also to give it a 6 pixel double border with collapsing, set the margin to 20 pixels on the top and bottom, and auto for the left and right, as well as to set the table layout to fixed with a width of 85%. */
     table {
         background-image: url(lht_photo1.png);
         background-position: bottom right;
@@ -97,6 +99,7 @@
         width: 85%;
     }
 
+    /* This style affects heading cells and data cells to give them a gray border, set their font size to .85em with normal font weight, add 5 pixels of padding, align the text to the top of the cell, give them a width of 14.28% with the word wrap set to break word. */
     th,
     td {
         border: 1px solid gray;
@@ -108,16 +111,19 @@
         word-wrap: break-word;
     }
 
+    /* This style sets the background color and text color of data cells. */
     td {
         background-color: rgba(171, 171, 171, .6);
         color: rgb(11, 12, 145);
     }
 
+    /* This style affects data cells with a data-date attribute including "Feb" to set their background color and give them a box shadow. */
     td[data-date*='Feb'] {
         background-color: rgba(232, 214, 148, .6);
         box-shadow: inset gray 0 0px 20px;
     }
 
+    /* This style affects the table caption to vertically align it to the top, center the text with a font size of 1.2em and 3 pixel letter spacing, and 10 pixels of padding on the bottom. */
     caption {
         vertical-align: top;
         text-align: center;
